--- a/css/website.css
+++ b/css/website.css
@@ -1,7 +1,7 @@
 body{
 margin: 0px;
 line-height: 45px;
-font-size: 30px;
+font-size: 25px;
 font-family: sans-serif;
 background-color: #F2E74B;
 }
@@ -9,7 +9,7 @@ background-color: #F2E74B;
 header{
 	background-color: #F2E74B;
 	text-align: center;
-	padding-top: 20px;
+	padding-top: 10px;
 	padding-bottom: 10px;
 	width: 100%;
 }
@@ -19,12 +19,15 @@ h1, h2 {
 	font-size: 30px;
 	color: #1F85DF;
 	padding-top: 30px;
+
 }
 header h1{
 	color: #1F85DF;
-	font-family: 'SpongeBob Font Condensed', sans-serif;
-	font-size: 80px;
+	font-family: 'SpongeBob Font Wide', sans-serif;
+	font-size: 65px;
 	border:  10px white;
+	padding: 20px ;
+
 }
 
 header img{
@@ -34,9 +37,10 @@ header img{
 
 main{ 
 	max-width: 1000px;
-	margin: 0 auto;
+	margin: 0 auto ;
 	background-color: #FAF4E8;
-	padding: 10px 50px;
+	padding: 20px 50px;
+	text-align: justify;
 
 }
 
@@ -55,15 +59,17 @@ a:hover{
 }
 
 footer{
- 	background-color: #F2E74B;
 	text-align: center;
 	color: #1F85DF;
-	padding:20px 430px;
-	font-size: 25px;
+	max-width: 1000px;
+	margin: 0 auto ;
+ 	background-color: #F2E74B;
+	padding: 10px 0px;
  }
 
  footer p{
  	margin: 0;
+
  }
 
  footer a{
@@ -72,7 +78,7 @@ footer{
 
  p.caption{
  	color: #999999;
- 	font-size: 30px;
+ 	font-size: 20px;
  	font-style: italic;
  	margin-top: 0;
  }
